crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__error__json.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
--- stderr ---
{"error":"it did not work"}
