crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__error__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
--- stderr ---
Error: it did not work
