crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__error__pretty.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
--- stderr ---
✗ it did not work
