crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__error__pretty_color.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
--- stderr ---
<red>✗</red> <red>it did not work</red>
